--- a/src/pages/food-table/food-table.css
+++ b/src/pages/food-table/food-table.css
@@ -34,71 +34,24 @@
     margin-top: 54px;
 }
 
-.foodTable .wrapper{
+.foodTable .wrapper {
     display: flex;
-    justify-content: flex-start;
+    justify-content: space-between;
     align-items: flex-start;
-    flex-direction: row;
+    flex-direction: column;
     width: 100%;
     margin-top: 64px;
-}
-
-.foodTable .wrapper .food {
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    row-gap: 20px;
-    width: 70%;
-    height: 600px;
     margin-left: 32px;
-    overflow: auto;
 }
 
-.foodTable .wrapper .food .foodItemHolder{
+.foodTable .wrapper .foodItemsHolder {
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
     row-gap: 20px;
-    width: 100%;
+    width: 96%;
     height: 600px;
     overflow: auto;
 }
 
-.foodTable .wrapper .food .addNew {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 99%;
-    min-height: 180px;
-    border: 1px solid #01660c;
-    box-shadow: 2px 2px 5px 0px #00820e;
-    border-radius: 5px;
-}
-
-.foodTable .wrapper .food .foodHolder {
-    display: flex;
-    flex-direction: row;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 99%;
-    min-height: 180px;
-    border: 1px solid #01660c;
-    box-shadow: 2px 2px 5px 0px #00820e;
-    border-radius: 5px;
-    margin-bottom: 5px;
-}
-
-.foodTable .wrapper .statistics{
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    width: 300px;
-    height: 380px;
-    border: 1px solid #01660c;
-    border-radius: 5px;
-    margin-left: 100px;
-}
