small change & edit new program page

--- a/src/pages/new-program/new-program.css
+++ b/src/pages/new-program/new-program.css
@@ -1,3 +1,15 @@
 .newProgram {
     display: flex;
 }
+
+.newProgram .statistics {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    width: 300px;
+    height: 380px;
+    border: 1px solid #01660c;
+    border-radius: 5px;
+    margin-right: 32px;
+}
