--- a/src/components/core/header/header.css
+++ b/src/components/core/header/header.css
@@ -58,3 +58,11 @@
     margin-right: 20px;
     cursor: pointer;
 }
+
+.header .right .singOut {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-right: 20px;
+    cursor: pointer;
+}
