--- a/src/components/food-table/food-item/food-holder.css
+++ b/src/components/food-table/food-item/food-holder.css
@@ -10,13 +10,18 @@
     border-radius: 5px;
 }
 
+.foodHolder .customImage{
+    width: 300px;
+    height: 200px ;
+}
+
 .foodHolder img {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 200px;
-
+    border-bottom: 1px solid #00820e;
 }
 
 .foodHolder h3 {
