small edits & create statistics component

--- a/src/components/new-program/add-person-info/add-person-info.css
+++ b/src/components/new-program/add-person-info/add-person-info.css
@@ -4,7 +4,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 65%;
-    min-height: 260px;
+    height: 225px;
     border: 1px solid #01660c;
     box-shadow: 2px 2px 5px 0px #00820e;
     border-radius: 5px;
