--- a/src/pages/new-program/new-program.css
+++ b/src/pages/new-program/new-program.css
@@ -3,6 +3,9 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: flex-start;
+    width: 98vw;
+    height: 92vh;
+    margin-right:0;
 }
 
 .newProgram .titleInNewProgram {
@@ -29,4 +32,11 @@
     display: flex;
     flex-direction: row;
     column-gap: 20px;
+}
+
+.newProgram form .weekInfo{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
 }
