edit useProgram & add foodCard & small edits

--- a/src/components/new-program/add-person-info/add-person-info.css
+++ b/src/components/new-program/add-person-info/add-person-info.css
@@ -5,8 +5,7 @@
     align-items: flex-start;
     width: 65%;
     height: 225px;
-    border: 1px solid #01660c;
-    box-shadow: 2px 2px 5px 0px #00820e;
+    border: 1px solid #00b96b;
     border-radius: 5px;
     margin-bottom: 20px;
     margin-left: 32px;
