--- a/src/components/new-program/week-table/week-table.css
+++ b/src/components/new-program/week-table/week-table.css
@@ -7,7 +7,7 @@
     margin-left: 32px;
     margin-top: 32px;
     width: 100%;
-    height: 400px;
+    height: 430px;
     position: relative;
     border: 1px solid #00b96b;
     border-radius: 5px;
@@ -21,4 +21,37 @@
     flex-wrap: wrap;
     overflow: auto;
     height: 100%;
+}
+
+.mainWeek .daysHolder .clickToAddFood {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    width: 50px;
+    height: 120px;
+    border: 1px solid #00b96b;
+    background-color: #00b96b;
+    border-radius: 3px;
+    margin-top: 8px;
+    margin-left: 8px;
+    margin-bottom: 8px;
+    user-select: none;
+}
+
+.mainWeek .daysHolder .clickToAddFood svg {
+    color: #fff;
+}
+
+.mainWeek .daysHolder .clickToAddFood:hover {
+    opacity: 0.92;
+}
+
+.mainWeek .daysHolder .clickToAddFood:active {
+    background-color: #fff;
+}
+
+.mainWeek .daysHolder .clickToAddFood:active svg {
+    color: #00b96b;
+
 }
