--- a/src/pages/new-program/new-program.css
+++ b/src/pages/new-program/new-program.css
@@ -4,15 +4,16 @@
     justify-content: flex-start;
     align-items: flex-start;
     width: 98vw;
-    height: 92vh;
-    margin-right:0;
+    min-height: 92vh;
+    height: min-content;
+    margin:0;
 }
 
 .newProgram .titleInNewProgram {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 45px;
+    margin-top: 22px;
     margin-left: 32px;
     text-transform: capitalize;
     font-size: 27px;
@@ -28,7 +29,8 @@
 
 .newProgram form> .personInfoAndStat{
     width: 100%;
-    height: 300px;
+    min-height: 270px;
+    height: fit-content;
     display: flex;
     flex-direction: row;
     column-gap: 20px;
