--- a/src/components/new-program/add-person-info/add-person-info.css
+++ b/src/components/new-program/add-person-info/add-person-info.css
@@ -24,7 +24,7 @@
     text-transform: capitalize;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #01660c;
+    color: #00b96b;
     font-weight: 700;
     width: 100%;
 }
