--- a/src/components/new-program/food-card/food-card.css
+++ b/src/components/new-program/food-card/food-card.css
@@ -31,6 +31,7 @@
     display: flex;
     flex-direction: column;
     width: 150px;
+    height: 110px;
     padding-top: 5px;
 }
 
@@ -39,14 +40,14 @@
     justify-content: flex-start;
     margin-left: 8px;
     width: max-content;
-    font-size: 16px;
+    font-size: 14px;
     text-transform: capitalize;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-weight: 500;
-    color: #00820e;
+    color: #089f17;
 }
 
-.foodCard .infoHolder .trash{
+.foodCard .infoHolder .trash {
     display: flex;
     flex-direction: row;
     justify-content: flex-end;
@@ -56,3 +57,6 @@
     margin: 0;
 }
 
+.foodCard .infoHolder .trash:hover {
+    opacity: 0.92;
+}
