--- a/src/components/new-program/statistics/statistics.css
+++ b/src/components/new-program/statistics/statistics.css
@@ -23,7 +23,7 @@
     text-transform: capitalize;
     font-size: 20px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #01660c;
+    color: #00b96b;
     font-weight: 700;
 }
 
@@ -42,11 +42,11 @@
     font-size: 16px;
     width: 100%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #666;
-    text-shadow: 1px 1px 3px #01660c;
+    color: #00b96b;
     font-weight: 700;
     padding-left: 22px;
     margin-top: 20px;
+    text-decoration: underline;
 }
 
 .statistics .saveButton {
