edit the reducer & other things

--- a/src/components/new-program/day/day.css
+++ b/src/components/new-program/day/day.css
@@ -4,6 +4,7 @@
     align-items: center;
     width: 100px;
     height: 30px;
+    color: rgb(82, 82, 82);
     border: 1px solid #ced4da;
     border-bottom: 1px solid #00b96b;
     border-top-right-radius: 5px;
