--- a/src/pages/new-program/new-program.css
+++ b/src/pages/new-program/new-program.css
@@ -18,7 +18,7 @@
     text-transform: capitalize;
     font-size: 27px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #01660c;
+    color: #00b96b;
     font-weight: 700;
 }
 
