--- a/src/components/core/header/header.css
+++ b/src/components/core/header/header.css
@@ -2,6 +2,7 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    position: fixed;
     width: 100%;
     height: 70px;
     background-color: rgb(221, 250, 221);
