small edits & try to make statistics work correct

--- a/src/components/new-program/add-food-card/add-food-card.css
+++ b/src/components/new-program/add-food-card/add-food-card.css
@@ -66,6 +66,10 @@
     width: 300px;
 }
 
+.wrapperInAddCard .addCard .foodCardInAddCard .foodCard .customImage>div>div {
+    width: 155px;
+}
+
 .wrapperInAddCard .addCard .foodCardInAddCard .foodCard .infoHolder {
     margin-left: 15px;
 }
