--- a/src/components/new-program/statistics/statistics.css
+++ b/src/components/new-program/statistics/statistics.css
@@ -40,7 +40,7 @@
     align-items: center;
     text-transform: capitalize;
     font-size: 16px;
-    width: 100%;
+    width: 90%;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: #00b96b;
     font-weight: 700;
@@ -59,4 +59,7 @@
     display: flex;
     margin-right: 16px;
     margin-bottom: 8px;
+    width: 100%;
+    margin-left: 16px;
+    justify-content: center;
 }
