--- a/src/components/new-program/add-food-card/add-food-card.css
+++ b/src/components/new-program/add-food-card/add-food-card.css
@@ -45,12 +45,21 @@
 
 .wrapperInAddCard .addCard .foodCardInAddCard {
     display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
     width: 100%;
     height: 320px;
     margin: 0;
-    margin-top: 40px;
-    justify-content: center;
+    margin-top: 20px;
 
+}
+.wrapperInAddCard .addCard .foodCardInAddCard>label {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
 }
 
 .wrapperInAddCard .addCard .saveAndCancelInAddCard {
