make PDF printer comp & make the pdf button work

--- a/src/components/view-programs/program-card/program-card.css
+++ b/src/components/view-programs/program-card/program-card.css
@@ -10,6 +10,10 @@
 
 }
 
+a {
+    text-decoration: none;
+}
+
 .programCard .titleInCard {
     margin: 0;
     margin-top: 5px;
@@ -53,6 +57,7 @@
     align-items: center;
     cursor: pointer;
 }
+
 
 .programCard .buttons .delete {
     position: relative;
