--- a/src/pages/view-programs/view-programs.css
+++ b/src/pages/view-programs/view-programs.css
@@ -47,7 +47,7 @@
     justify-content: flex-start;
     align-items: flex-start;
     flex-wrap: wrap;
-    width: 95%;
+    width: 95vw;
     border: 1px solid #00b96b;
     border-radius: 5px;
     min-height: 620px;
