change the image from URL src to upload & edit css

--- a/src/pages/food-table/food-table.css
+++ b/src/pages/food-table/food-table.css
@@ -21,7 +21,7 @@
     text-transform: capitalize;
     font-size: 25px;
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: #01660c;
+    color: #00b96b;
     font-weight: 700;
 }
 
