--- a/src/pages/home/home.css
+++ b/src/pages/home/home.css
@@ -1,7 +1,7 @@
 .homePage {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
     height: 92.1vh;
 }
@@ -11,14 +11,13 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    flex-basis: 50%;
+    overflow: auto;
 }
 
 .homePage .image img {
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-left: 100px;
     border: 0.01em solid #00b96b;
     border-radius: 5px;
 }
@@ -30,8 +29,8 @@
     justify-content: center;
     align-items: center;
     height: 100%;
-    flex-basis: 50%;
     row-gap: 20px;
+    overflow: auto;
 }
 
 .homePage .buttons button {
