--- a/src/components/core/header/header.css
+++ b/src/components/core/header/header.css
@@ -30,6 +30,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #01660c;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .header .left .titleInHeader {
@@ -41,6 +42,7 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
     color: #01660c;
     font-weight: 600;
+    cursor: pointer;
 }
 
 .header .right {
