--- a/src/components/new-program/add-food-card/add-food-card.css
+++ b/src/components/new-program/add-food-card/add-food-card.css
@@ -7,6 +7,8 @@
     left: 0;
     height: 100vh;
     width: 100vw;
+    z-index: 2;
+    backdrop-filter: blur(5px);
 }
 
 .wrapperInAddCard .back {
